--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ body {
     box-shadow: rgba(0, 0, 0, 0.05) 0 6px 24px, rgba(0, 0, 0, 0.08) 0 0 0 1px;
     border-radius: 10px;
     padding: 10px;
-    width: 80%;
+    width: 800px;
     margin-top: 50px;
 }
 
