--- a/client/src/index.css
+++ b/client/src/index.css
@@ -145,8 +145,8 @@ input {
  position: absolute;
  left: 0;
  top: 0;
- width: 100vw;
- height: 100vw;
+ width: 100vh;
+ height: 100vh;
  background-color: rgba(0, 0, 0, 0.5);
  display: flex;
  justify-content: center;
